# Scylla-Prepare-Derive

./: Cargo.toml  README.md
example/: Cargo.toml
example/cql/queries/: full_search_user.cql  get_group.cql  instant_search_user.cql
example/cql/queries/use_code/: 0.cql
example/src/: main.rs
scylla-prepare-derive/: Cargo.toml
scylla-prepare-derive/src/: lib.rs
