[package]
name = "scylla-prepare-derive"
version = "0.0.1"
edition = "2021"

exclude = ["examples"]

[lib]
proc-macro = true


[dependencies]
serde = "1.0.204"
derive_more = "0.99.18"
env_logger = "0.11.3"
log = "0.4.22"
serde_json = "1.0.121"
scylla = "0.13.1"
quote = "1.0.36"
syn = "2.0.72"
proc-macro2 = "1.0.86"
